{
    "name": "ShipInput",
    "maps": [
        {
            "name": "Flying",
            "id": "7e106430-8cdf-4c2e-a028-fd2bba493a2a",
            "actions": [
                {
                    "name": "ActivateEngine",
                    "type": "Button",
                    "id": "884c90f7-467a-4db3-af53-dfaf2d898895",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchToInventory",
                    "type": "Button",
                    "id": "2497ef4b-b903-4d16-b6df-a8088338c38e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OrientEngineMount",
                    "type": "Value",
                    "id": "cf21d22d-0381-47ec-82d7-a17057ca5716",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1ef0b928-b9e3-4636-b088-d7d4adc91a1f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivateEngine",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0fce606-b994-4574-b5d2-ec3f745b237c",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchToInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7981be3f-528d-4889-95b8-ba4ee7e855c0",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OrientEngineMount",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "2bc81ea1-86eb-4030-bfa2-a1ab72110791",
            "actions": [
                {
                    "name": "Drag",
                    "type": "Button",
                    "id": "ae1ed454-4c41-4ed3-9792-38c13e3b25eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchToFlying",
                    "type": "Button",
                    "id": "83daa2fa-25e1-40d5-81cb-f8363c6224f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PositionHand",
                    "type": "Value",
                    "id": "05c51c11-63fc-4c44-a8ed-72484d70dd29",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "05f96ad2-6868-406f-8121-bea29d245ee1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6051fdcc-d215-4a65-8793-555e6b72df1a",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchToFlying",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "792d3d44-b711-4741-996a-c4e6f5cf2e00",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PositionHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Always",
            "id": "2056f970-022c-4cfb-bd4f-f21e65e28889",
            "actions": [
                {
                    "name": "Walk Clockwise",
                    "type": "Button",
                    "id": "af2e819e-ac94-4d94-a316-36bd6bf1d3f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Walk AntiClockwise",
                    "type": "Button",
                    "id": "01b16915-0e5d-483e-a623-8b654280e7c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eb20dd90-1813-4703-b5b9-ca051629a327",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk Clockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63138aa4-bcac-4104-ab52-3049bbf0163e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk Clockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ddfb6891-4c1b-4a21-90a7-bb6df9296267",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk AntiClockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5fbaa8f-93a1-4edc-9054-6cc3b27df900",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk AntiClockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}